Chapter_16/objects/Advertisement__c.object
<CustomObject>
    <description>Contains the details of a sold advertisement</description>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>the customer who purchased the ad</description>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Advertisements</relationshipLabel>
        <relationshipName>Advertisements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>the opportunity related to this advertisement</description>
        <label>Deal</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Advertisements</relationshipLabel>
        <relationshipName>Advertisements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Discount_Approved__c</fullName>
        <label>Discount Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
                <value>
                    <fullName>Approval Requested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Expected_Dismission_Date__c</fullName>
        <description>date when the ad should be dismissed</description>
        <formula>ADDMONTHS(
  Installation_Date__c ,
  IF(
    ISBLANK(Months_of_availability__c),
    0,  
    Months_of_availability__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Dismission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Installation_Address__c</fullName>
        <description>the whole address of installation in plain text</description>
        <label>Installation Address</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Installation_City__c</fullName>
        <label>Installation City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installation_Country__c</fullName>
        <label>Installation Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Greece</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>Norway</fullName>
                </value>
                <value>
                    <fullName>Russia</fullName>
                </value>
                <value>
                    <fullName>Spain</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Installation_Date__c</fullName>
        <description>the date when ad is installed</description>
        <label>Installation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ad is still in place or not</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Months_of_availability__c</fullName>
        <description>number of months the ad will be active</description>
        <label>Months of availability</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <description>the amount paid by the customer</description>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewal_Status__c</fullName>
        <description>if the advertisement is about to be dismissed (or has already been dismissed) this field represents which is the renewal status</description>
        <label>Renewal Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Renewing</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>To be recalled</fullName>
                </value>
                <value>
                    <fullName>Renewed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Copper</fullName>
                    <default>true</default>
                    <label>Copper</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Advertisement</label>
    <listViews>
        <fullName>Active_Ads</fullName>
        <columns>NAME</columns>
        <columns>Is_Active__c</columns>
        <columns>Installation_Country__c</columns>
        <columns>Installation_City__c</columns>
        <columns>Price__c</columns>
        <columns>Installation_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Ads</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>SLA__c</columns>
        <columns>Is_Active__c</columns>
        <columns>Installation_Country__c</columns>
        <columns>Price__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Italian_Ads</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Deal__c</columns>
        <columns>Installation_Address__c</columns>
        <columns>Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Installation_Country__c</field>
            <operation>equals</operation>
            <value>Italy</value>
        </filters>
        <filters>
            <field>Is_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Italian Ads.</label>
    </listViews>
    <nameField>
        <displayFormat>A-{YYYY}-{00000000}</displayFormat>
        <label>Advertisement Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Advertisements</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Check_Approval_Status_on_Activation</fullName>
        <active>true</active>
        <description>Check approval status before activating the advertisement</description>
        <errorConditionFormula>AND(
					ISCHANGED(Is_Active__c),
					Is_Active__c = true,
				 Discount__c &gt; 0,
				 Price__c &gt; 0,
					NOT(ISPICKVAL(Discount_Approved__c, &apos;Approved&apos;))
)</errorConditionFormula>
        <errorMessage>You cannot activate the advertisement if record has not been submitted for approval and approved</errorMessage>
    </validationRules>
</CustomObject>